# scientific-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
data/: patients.csv
scientific_project/datahelper/: __init__.py  datahelper.py
