[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific_project" 
version = "0.1"
requires-python = ">=3.8"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["scientific_project"] 
